fix: set overflow-y to auto on List component

--- a/assets/src/js/admin/reports/components/list/style.scss
+++ b/assets/src/js/admin/reports/components/list/style.scss
@@ -9,7 +9,7 @@
 
 .givewp-list {
 	max-height: 432px;
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 
 	> * {
